@@ -12,7 +12,6 @@ import java.util.Arrays;
 import java.util.Scanner;
 
 import org.apache.commons.cli.*;
-import com.opencsv.CSVWriter;
 
 
 public class EEVectROM 
@@ -20,13 +19,14 @@ public class EEVectROM
     private static final byte QUIT_APP  = 1;
     private static final byte NO_ERROR  = 0;
 
-    //  Verify if file is a vectrex rom with first 2 magic bytes
+    //  Verify if file is a vectrex rom with first 5 magic bytes
     public static boolean verifyVectrexFile( File fileName )
     {
         boolean result  = false;
         byte    magic[] = new byte[5];
 
-        try  
+        //	Read vectrextex magic file with 0x67-0x20-0x47 bytes extend to 0x45-0x0x43
+		try  
         {
             FileInputStream fis_magic = new FileInputStream( fileName );
 
@@ -46,7 +46,30 @@ public class EEVectROM
         return result;
     }
 
-    public static void writeBytes( FileOutputStream writeStream, long nBytes, int writeBytes )
+    public static boolean verifyVectrexFile_2( File fileName )
+    {
+        byte    magicBytes[]    = {0x67, 0x20, 0x47, 0x43, 0x45};
+        boolean result          = false;
+
+        //	Read vectrextex magic file with 0x67-0x20-0x47 bytes extend to 0x45-0x0x43
+		try{
+            FileInputStream fis_magic = new FileInputStream( fileName );
+
+            for ( byte bytesCount = 0; bytesCount < magicBytes.length; bytesCount++ )
+                result ^= ( fis_magic.read() == magicBytes[bytesCount] );
+            
+            fis_magic.close();
+        }
+        catch( Exception e )
+        {  
+            e.printStackTrace();
+        }  
+        
+        return result;
+    }
+
+    //	Write n times value bytes to streaming file
+	public static void writeBytes( FileOutputStream writeStream, int nBytes, int writeBytes )
     {
         for ( long bytesCount = 0x0000; bytesCount < nBytes; bytesCount++ )
         {
@@ -61,7 +84,8 @@ public class EEVectROM
         }
     }
 
-    public static void writeBlankBytes( FileOutputStream writeStream, long nBytes, int writeBytes )
+    //	Write n times blanck bytes to streaming file
+	public static void writeBlankBytes( FileOutputStream writeStream, int nBytes, int writeBytes )
     {
         for ( long bytesBlankCount = 0x0000; bytesBlankCount < nBytes; bytesBlankCount++ )
         {
@@ -76,7 +100,8 @@ public class EEVectROM
         }
     }
 
-    public static void writeBytesFromRead( FileInputStream readStream, FileOutputStream writeStream, long nBytes )
+    //	Write value bytes from reading stream file
+	public static void writeBytesFromRead( FileInputStream readStream, FileOutputStream writeStream, int nBytes )
     {
         for ( long bytesBlankCount = 0x0000; bytesBlankCount < nBytes; bytesBlankCount++ )
         {
@@ -91,15 +116,20 @@ public class EEVectROM
         }
     }
 
-    public static byte writeROMFile( String folder, ArrayList<String> vectrexFileList, ArrayList<Integer> bytesBankList, boolean createCVS, boolean createEEP )
+    public static byte writeROMFile(	String folder, ArrayList<String> vectrexFileList, ArrayList<Integer> bytesBankList,
+										boolean createCVS, boolean createEEP )
     {
-        int countVecFile    = 0;
-        int count16KiloROM  = 0;
-        //int count8KiloROM   = 0;
-
-        //File fileROM = new File( folder + "/Export/" + "VectROM.ROM" );
-
-        File fileROM = new File( folder + "/Export/" );
+        //	count of number of vectrex file in folfer
+		int countVecFile    = 0;
+        //	 Number of 16k ROM File in folder
+		int count16KiloROM  = 0;
+		//	 Number of 32k ROM File in folder
+		int count32KiloROM  = 0;
+        //  file ROM Size in Bytes
+        int fileROMSize    = 0;
+        
+        //	Create Folder to export new generated file
+		File fileROM = new File( folder + "/Export/" );
         fileROM.mkdir();
 
         fileROM = new File( folder + "/Export/VectROM.ROM" );
@@ -107,8 +137,9 @@ public class EEVectROM
         Scanner sc      = new Scanner( System.in );
         String  input   = new String();
 
-        try
-        {
+        fileROMSize = (int)fileROM.length();
+
+        try{
             countVecFile = vectrexFileList.size();
 
             if ( !fileROM.createNewFile() )
@@ -117,7 +148,6 @@ public class EEVectROM
 
                 System.out.print( "Do you want overwrite ROM ( Y : to overwrite - Q for Quit ) ? " );
 
-                ////Scanner sc = new Scanner( System.in );
                 input = sc.nextLine();
                     
                 if ( input.contains( "Q" ) || input.contains( "q" ) )
@@ -134,53 +164,108 @@ public class EEVectROM
             {
                 File vectrexFile = new File( folder + "/" + vectrexFileList.get( count ) );
 
-                long vectrexFileLength = vectrexFile.length();
+				int vectrexFileLength = (int) vectrexFile.length();
 
                 FileInputStream readStream = new FileInputStream( vectrexFile );
 
                 int bytesBank = 0x00;
 
-                //  4 Kilos Vectrex ROM
-                if ( vectrexFileLength == 0x1000 )
+                //  0-4 KB Vectrex ROM
+                if ( vectrexFileLength < 0x1000 )
                 {
+                    //  Read Vectrex File ROM from List and Write to File ROM 
                     writeBytesFromRead( readStream, writeStream, vectrexFileLength );
 
-                    writeBlankBytes( writeStream, ( 0x2000 - vectrexFileLength ), 0x00 );
+                    //  Add Dummy Bytes to complete 4 KB ROM    
+                    writeBlankBytes( writeStream, ( 0x1000 - vectrexFileLength ), 0x00 );
 
-                    bytesBank = count * 0x04 + 0x03;
+                    //	finish with blank bytes for 8k ROM
+					writeBlankBytes( writeStream, 0x1000, 0x00 );
+
+                    //	Generate bytes Banks for ROM File
+					bytesBank = count * 0x04 + 0x03;
                 }
-                //  4-8 Kilos Vectrex ROM
-                else if ( vectrexFileLength > 0x1000 && vectrexFileLength <= 0x2000 )
+                //  4-8 KB Vectrex ROM
+                else if ( vectrexFileLength >= 0x1000 && vectrexFileLength <= 0x2000 )
                 {
                     writeBytesFromRead( readStream, writeStream, vectrexFileLength );
 
-                    if ( vectrexFileLength < 0x2000 )
+                    //	finish with blank bytes for 8k ROM
+                    if ( vectrexFileLength == 0x1000 )
+                    {
+                        writeBlankBytes( writeStream, 0x1000, 0x00 );
+                    }
+                    else if ( ( vectrexFileLength != 0x2000 ) && ( vectrexFileLength != 0x1000 ) )
                     {
                         writeBlankBytes( writeStream, ( 0x2000 - vectrexFileLength ), 0x00 );
                     }
 
-                    //count8KiloROM++;
-
                     bytesBank = count * 0x04 + 0x03;
                 }
-                //  8-16 Kilos Vectrex ROM
+				//  8-16 KB Vectrex ROM
                 else if ( vectrexFileLength > 0x2000 && vectrexFileLength <= 0x4000 )
                 {
+                    //	Writting 0x2000 bytes after lastest 8k vectr(ex ROM ( according to ROM cartridge memory map )
+					if ( count16KiloROM == 0 )
+					{
+                        writeBlankBytes( writeStream, fileROMSize % 0x4000, 0x00 );
+                    }
+
+                    //  Get The New ROM File Size
+                    fileROMSize = (int)fileROM.length();
+
                     writeBytesFromRead( readStream, writeStream, vectrexFileLength );
 
-                    if ( vectrexFileLength < 0x4000 )
+                    if ( vectrexFileLength != 0x4000 )
                     {
                         writeBlankBytes( writeStream, ( 0x4000 - vectrexFileLength ), 0x00 );
                     }
 
-                    bytesBank = ( count + count16KiloROM ) * 0x04 + 0x00;
-                    //bytesBank = ( count + count16KiloROM ) * 0x04 + 0x03;
+                    //  Generate byteBank = Extract A13-A18 Address form ROM File Size and Add 0x02 ( b10 ) to the two 1st bits
+                    //  Formating Bytes : A18 A17 A16 A15 A14 A13 1 0
+                    bytesBank = (int) ( ( ( fileROMSize >> 0x0D ) << 0x02 ) + 0x02 );
+
+                    /* //   Just for Debug
+                    System.out.println( "16K => File ROM Size : "   + convertDec2Hex( fileROMSize, true ) + " - bytesBank : " 
+                                                                    + convertDec2Hex( (long)( ( fileROMSize >> 0x0D ) ), true ) + " / "
+                                                                    + convertDec2Hex( (int)bytesBank, true ) );
+                    */                                                                    
 
                     count16KiloROM++;
                 }
-                
+                //  16-32 KB Vectrex ROM
+                else if ( vectrexFileLength > 0x4000 && vectrexFileLength <= 0x8000 )
+                {
+                    if ( count32KiloROM == 0 )
+					{                        
+                        writeBlankBytes( writeStream, fileROMSize % 0x8000, 0x00 );
+                    }
+					
+                    fileROMSize = (int)fileROM.length();
+
+                    writeBytesFromRead( readStream, writeStream, vectrexFileLength );
+
+                    if ( vectrexFileLength != 0x8000 )
+                    {
+                        writeBlankBytes( writeStream, ( 0x8000 - vectrexFileLength ), 0x00 );
+                    }
+
+                    //  Generate byteBank = Extract A13-A18 Address form ROM File Size and Add 0x00 ( b00 ) to the two 1st bits
+                    //  Formating Bytes : A18 A17 A16 A15 A14 A13 0 0
+                    bytesBank = (int) ( ( ( fileROMSize >> 0x0D ) << 0x02 ) + 0x00 );
+
+                    /* //   Just for Debug
+                    System.out.println( "32K => File ROM Size : "   + convertDec2Hex( fileROMSize, true ) + " - bytesBank : " 
+                                                                    + convertDec2Hex( (int)bytesBank, true ) );
+                    
+                    */                                                                    
+                                                                    
+                    count32KiloROM++;
+                }
+				
                 readStream.close();   
 
+                //  Add byteBank to List 
                 bytesBankList.add( bytesBank );
 
             }
@@ -193,7 +278,6 @@ public class EEVectROM
             {
                 File fileCVS = new File( folder + "/Export/VectrexRomList.cvs" );
 
-                ////Scanner sc2 = new Scanner( System.in );
                 if ( fileCVS.exists() )
                 {
                     System.out.println( "Info : Vectrex ROM List already exist." );
@@ -227,7 +311,6 @@ public class EEVectROM
             {
                 File byteBanksEEP = new File( folder + "/Export/byteBanksEEP.eep" );
 
-                //////Scanner sc3 = new Scanner( System.in );
                 if ( byteBanksEEP.exists() )
                 {
                     System.out.println( "Info : EEP EEPROM file already exist." );
@@ -257,7 +340,6 @@ public class EEVectROM
             }
 
             sc.close();
-
         }           
         catch ( IOException e )
         {
@@ -267,18 +349,14 @@ public class EEVectROM
         return 0;
     }
 
+    //  Create CVS file format ( read with spreadsheet ) with vactrex cartridge ROM File Name, Size and Memory Mapping ROM 
     public static void createCVS( String strDir, ArrayList<String> romListSize, ArrayList<Integer> bytesBankList )
-    {      
-        CSVWriter csvWriter;
-
+    { 
         try
         {
-            csvWriter = new CSVWriter( new FileWriter( strDir + "/Export/VectrexRomList.cvs" ) );
-                                
-            csvWriter.writeNext( new String[]
-            {
-                "No", "Vectrex ROM Name", "File Size", "Vectrex ROM Mapping"
-            } );
+            FileWriter fileWriter = new FileWriter( strDir + "/Export/VectrexRomList.cvs" );
+
+            fileWriter.write( "No,Vectrex ROM Name,File Size,Vectrex ROM Mapping\r\n" );
 
             for ( int count = 0; count < romListSize.size(); count++ )
             {
@@ -286,16 +364,15 @@ public class EEVectROM
 
                 long mappingROM = ( bytesBankList.get( count ) >> 0x02 ) << 0x0D;
 
-                csvWriter.writeNext( new String[]
-                {
-                    "No. " + Integer.toString( count + 1 ), 
-                    romListSize.get( count ), 
-                    vecFile.length() + " Bytes",
-                    convertDec2Hex( mappingROM, true )
-                } );
+                fileWriter.write( "No. " + Integer.toString( count + 1 ) + ","
+                                         + romListSize.get( count ) + "," 
+                                         + vecFile.length() + " Bytes" + ","
+                                         + convertDec2Hex( mappingROM, true )
+                                         + "\r\n"
+                                );
             }
-    
-            csvWriter.close();
+
+            fileWriter.close();
 
             System.out.println();
             System.out.println( "Create Vectrex List CVS File.");
@@ -308,12 +385,15 @@ public class EEVectROM
 
     }
 
-    //  TODO : Create EEP byte Banks : Input start bansks vectrex game ( line 307 )
+    //  Create EEP File with byteBank for Vectrex ROM Cartridge Card 
     public static void createByteBanksEEP( File byteBanksEEP, ArrayList<Integer> bytesBankList )
     {
         Scanner sc = new Scanner( System.in );
+
         System.out.print( "Enter Witch ROM Game on Vectrex Startup ( eg : 1.." +  bytesBankList.size() + " ) ? " );
-        int Num = Integer.parseInt( sc.nextLine() );
+
+        int Num = sc.nextInt();
+
         sc.close();
 
         if ( Num < 1 || Num > bytesBankList.size() )
@@ -323,23 +403,25 @@ public class EEVectROM
             Num = 0x01;
         }
 
-        try
-        {
+        try {
             FileOutputStream writeStream = new FileOutputStream( byteBanksEEP );
 
             int countBytesBankList = bytesBankList.size();
 
+            //  Write the Start Cartridge ROM, number of Cartridge ROM
             writeBytes( writeStream, 0x02, 0xFF );
             writeBytes( writeStream, 0x01, Num );
             writeBytes( writeStream, 0x01, countBytesBankList );            
             writeBytes( writeStream, 0x0C, 0xFF );
 
+            //  Write byteBank Data
             for ( byte count = 0x00; count < countBytesBankList; count++ )
             {
                 writeStream.write( bytesBankList.get( count ) );
             }
             
-            writeBytes( writeStream, 0x200 - ( countBytesBankList + 0x10 ), 0xFF );
+            //  Write Dummy Bytes until 0x400 ( 1024 bytes )
+            writeBytes( writeStream, 0x400 - ( countBytesBankList + 0x10 ), 0xFF );
         }
         catch ( IOException e )
         {
@@ -347,6 +429,7 @@ public class EEVectROM
         }   
     }
 
+    //  Set Cartridge Vectrex File Folder
     public static String setUserVectFolder()
     {
         Scanner sc = new Scanner( System.in );
@@ -372,6 +455,7 @@ public class EEVectROM
         return strRomDir;
     }
 
+    //  Generate byteBank List String
     public static String GenerateByteBanks( ArrayList<Integer> bytesBankList )
     {
         String strList = new String();
@@ -401,6 +485,13 @@ public class EEVectROM
     }
 
 
+    //////////////////////////
+    //  Main Program       //
+    ////////////////////////
+    /**
+     * @param args
+     * @throws IOException
+     */
     public static void main( String[] args ) throws IOException
     {
         boolean createCVS   = false;
@@ -413,8 +504,9 @@ public class EEVectROM
         System.out.println( "==================" );
         System.out.println();
 
-        Options options = new Options();
-        Option helpCLI = new Option( "h", "help", false, "Help for App" );
+        Options     options = new Options();
+        Option      helpCLI = new Option( "h", "help", false, "-Help for App" );
+
         //helpCLI.setRequired( true );
         options.addOption( helpCLI );
 
@@ -466,6 +558,7 @@ public class EEVectROM
                 return;
             }
 
+            //  Set Cartridge ROM File Folder in argument
             String folder = new String();
 
             if( cmd.hasOption( "f" ) )
@@ -499,6 +592,7 @@ public class EEVectROM
             e1.printStackTrace();
         }
 
+        //  Get Vectrex Cartridge file Folder if no argument
         if ( args.length == 0 )
         {
             dirVecFileFolder = new File( setUserVectFolder() );
@@ -512,30 +606,76 @@ public class EEVectROM
             public boolean accept( File dir, String name )
             {
 
-                return name.endsWith( "vec" );      // name.startsWith( "temp" ) &&
+                return name.endsWith( "vec" );
             }
+
         } );
         
+        //  Vectrex Files List Sorting by Size
         System.out.println( "\nVectrex Files List ( sort by size ) :" );
         
         Arrays.sort( matchingFiles, ( f1, f2 ) -> 
         {
-            return new Long( f1.length() ).compareTo( new Long( f2.length() ) );
+
+            return Long.valueOf( f1.length() ).compareTo( Long.valueOf( f2.length() ) );
         } );
+
+        long    sizeVectFile        = 0;
+        long    totalVectFileSize   = 0;
+
+        String  nameVectFile;
 
         for ( File file : matchingFiles )
         {
-            long    sizeVectFile = file.length();
-            String  nameVectFile = file.getName();
+            sizeVectFile = file.length();
+            nameVectFile = file.getName();
 
-            if ( verifyVectrexFile( file ) )
+            if ( verifyVectrexFile_2( file ) )
             {
                 romList.add( nameVectFile );
-            }
 
-            System.out.println( " File No " + romList.size() + ".\t" + nameVectFile + "\t\t- Size : " + sizeVectFile + " bytes" + "\t- Ranges : " );
+                totalVectFileSize += sizeVectFile;
+            }
+            else
+            {
+                System.out.println( "Warning : File '" + nameVectFile + "' doesnt match vectrex format - Skip this file." );
+            }
         }
+        
         System.out.println();
+
+        //  Verify if folder have at least one vec file
+        if ( romList.size() != 0 )
+        {
+            for ( int i = 0; i < romList.size(); i++ )
+            {
+                System.out.println( " File No " + (i+1) + ".\t" + romList.get( i ) );
+            }
+        }
+        else
+        {
+            System.out.println( "ERROR : No Vectrex File(s) in folder. QUIT..." );
+
+			return;
+        }
+
+        //  Verify if total vectrex file ROM size exceed flash EEPROM size 
+        if ( totalVectFileSize > 0x80000 )
+        {
+            String strBuf;
+
+            long sizeExcessBytes = totalVectFileSize - 0x8000;
+            if ( sizeExcessBytes >= 1024 )
+                strBuf = Integer.toString( (int) (sizeExcessBytes / 1024) ) + " KB . Remove at least 1 Vectrex ROM File ";
+            else
+                strBuf = Integer.toString( (int) sizeExcessBytes ) + " B . Remove 1 Vectrex ROM File";
+
+            System.out.println( "ERROR : total vectrex file ROM size exceed flash EEPROM size." );
+            System.out.println( "Exceed Bytes : " + strBuf );
+            System.out.println( "\nProgram QUIT" );
+
+            return;
+        }
         
         //  Create Vectrex ROM EEPROM File
         ArrayList<Integer> bytesBankList = new ArrayList<>();
@@ -564,7 +704,5 @@ public class EEVectROM
             System.out.println( "\nEEVECT Arduino Array : static const uint8_t Addressing[] PROGMEM = { " + GenerateByteBanks( bytesBankList ) + "};" );
             System.out.println();
         }
-
     }
-
 }
